// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "./PusElement.proto";


package pusGroundModel.protobuf;

message Pus018ConfiguredObcp {
extensions 11 to 111;

  optional ccsds_mal.protobuf.UINTEGER id = 1;
  optional ccsds_mal.protobuf.STRING hkParamNameForName = 2;
  optional ccsds_mal.protobuf.STRING hkParamNameForId = 3;
  optional ccsds_mal.protobuf.STRING hkParamNameForStatus = 4;
  optional ccsds_mal.protobuf.STRING hkParamNameForPriority = 5;
  optional ccsds_mal.protobuf.STRING hkParamNameForStepId = 6;
  optional ccsds_mal.protobuf.STRING status = 7;
  optional ccsds_mal.protobuf.STRING stepId = 8;
  optional ccsds_mal.protobuf.STRING priority = 9;
  optional pusGroundModel.protobuf.PusElement pusElement = 10;
}
