// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/TIME.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/UOCTET.proto";
import "./PusElement.proto";
import "./PusParameter.proto";


package pusGroundModel.protobuf;

message Pus018Obcp {
extensions 21 to 121;

  optional ccsds_mal.protobuf.UINTEGER id = 1;
  optional ccsds_mal.protobuf.STRING status = 2;
  optional ccsds_mal.protobuf.STRING stepId = 3;
  optional ccsds_mal.protobuf.STRING partitionId = 4;
  optional ccsds_mal.protobuf.STRING observabilityLevel = 5;
  optional ccsds_mal.protobuf.STRING priority = 6;
  repeated pusGroundModel.protobuf.PusParameter pus18Parameter = 7;
  optional pusGroundModel.protobuf.PusElement pusElement = 8;
  optional ccsds_mal.protobuf.UOCTET lastUpdateModeStatus = 9;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeStatus = 10;
  optional ccsds_mal.protobuf.UOCTET lastUpdateModeStepId = 11;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeStepId = 12;
  optional ccsds_mal.protobuf.UOCTET lastUpdateModePartitionId = 13;
  optional ccsds_mal.protobuf.TIME lastUpdateTimePartitionId = 14;
  optional ccsds_mal.protobuf.UOCTET lastUpdateModePriority = 15;
  optional ccsds_mal.protobuf.TIME lastUpdateTimePriority = 16;
  optional ccsds_mal.protobuf.UOCTET lastUpdateModeObsLevel = 17;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeObsLevel = 18;
  optional ccsds_mal.protobuf.UOCTET lastUpdateModeObcpId = 19;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeObcpId = 20;
}
