// Produced by Acceleo Protobuf Generator 1.1.2-R8


//////////////////////////////////////////////////////////////////////
// Start of user code HistoryZone
// HISTORY
//
// END-HISTORY
// End of user code HistoryZone
//////////////////////////////////////////////////////////////////////


import "ccsds_mal/types.proto";
import "pusModelEditor/Pus018Obcp.proto";

package pusModelEditor.protobuf;

message Pus018Model {
extensions 10 to 110;

  optional ccsds_mal.protobuf.UINTEGER engineStatus = 1;
  repeated pusModelEditor.protobuf.Pus018Obcp pus018Obcp = 2;
  optional ccsds_mal.protobuf.TIME groundDate = 3;
  optional ccsds_mal.protobuf.UINTEGER status = 4;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeEngineStatus = 5;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeEngineStatus = 6;
  optional ccsds_mal.protobuf.UINTEGER serviceApid = 7;
  optional ccsds_mal.protobuf.STRING serviceApidName = 8;
  optional ccsds_mal.protobuf.ULONG uniqueId = 9;
}
